--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Adventures Worth Noting",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,11 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "graphql": "^15.3.0",
+    "if-env": "^1.0.4"
+  },
   "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
-  "bugs": {
-    "url": "https://github.com/Shelbyrp/VentNote/issues"
-  },
-  "homepage": "https://github.com/Shelbyrp/VentNote#readme"
+    "concurrently": "^5.2.0"
+  }
 }
