--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
   },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Shelbyrp/VentNote.git"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "graphql": "^15.3.0",
-    "if-env": "^1.0.4"
+  "bugs": {
+    "url": "https://github.com/Shelbyrp/VentNote/issues"
   },
-  "devDependencies": {
-    "concurrently": "^5.2.0"
-  }
+  "homepage": "https://github.com/Shelbyrp/VentNote#readme"
 }
