--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ventnote",
   "version": "1.0.0",
   "description": "Adventures Worth Noting",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "cd server && npm start",
