--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ventnote",
   "version": "1.0.0",
   "description": "Adventures Worth Noting",
-  "main": "server/server.js",
+  "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
