--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@reach/combobox": "^0.13.0",
     "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,6 +22,7 @@
     "react-geocode": "^0.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "use-places-autocomplete": "^1.9.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
